# pip-uv

./: .gitignore  MANIFEST.in  Makefile  PUBLISHING.md  README.md  go.mod  pyproject.toml  release_script.py  setup.py
.github/workflows/: release.yml  test.yml
src/: main.go  main_test.go
